# opstack

./: pyproject.toml
examples/: advanced_optimization.py  basic_example.py  constrained_optimization.py
opstack/: __init__.py  facade.py
opstack/core/: __init__.py  objective.py  problem.py  registry.py  solver.py
opstack/solvers/: __init__.py
opstack/solvers/composite/: __init__.py  hybrid_solver.py
opstack/solvers/direct/: __init__.py  grid_search_solver.py  nelder_mead_solver.py
opstack/solvers/evolutionary/: __init__.py  differential_evolution_solver.py  evolution_strategy_solver.py  genetic_algorithm_solver.py
opstack/solvers/gradient_based/: __init__.py  adam_solver.py  gradient_descent_solver.py  momentum_gradient_descent_solver.py
opstack/solvers/stochastic/: __init__.py  particle_swarm_solver.py  random_search_solver.py  simulated_annealing_solver.py
