[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opstack"
version = "0.1.0"
description = "A simple modular framework to solve optimization problems"
authors = [
    "toreleon <levietthang0512@outlook.com>"
]
readme = "README.md"
packages = [{include = "opstack"}]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.2.5,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.poetry.scripts]
example = "examples.simple_optimization:main"
